# web-sdk

./: .gitignore  .npmrc  .prettierignore  .taplo.toml  .typos.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  coverage.json  eslint.config.js  knip.jsonc  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  vitest.config.ts  vitest.workspace.ts
.cargo/: config.toml
.github/workflows/: auto-release-main.yml  build.yml  changelog.yml  check-linked-client-pr.yml  check-publish.yml  lint.yml  nightly.yml  publish-crates-release.yml  (+7 more)
crates/idxdb-store/: Cargo.toml  README.md  build.rs
crates/idxdb-store/src/: .gitignore  README.md  auth.rs  lib.rs  package.json  promise.rs  tsconfig.bundler.json  tsconfig.json  vitest.config.ts
crates/idxdb-store/src/account/: js_bindings.rs  mod.rs  models.rs  utils.rs
crates/idxdb-store/src/chain_data/: js_bindings.rs  mod.rs  models.rs  utils.rs
crates/idxdb-store/src/export/: js_bindings.rs  mod.rs
crates/idxdb-store/src/import/: js_bindings.rs  mod.rs
crates/idxdb-store/src/js/: accounts.js  auth.js  chainData.js  export.js  import.js  notes.js  schema.js  settings.js  sync.js  transactions.js  utils.js
crates/idxdb-store/src/note/: js_bindings.rs  mod.rs  models.rs  utils.rs
crates/idxdb-store/src/settings/: js_bindings.rs  mod.rs  models.rs
crates/idxdb-store/src/sync/: js_bindings.rs  mod.rs  models.rs
crates/idxdb-store/src/transaction/: js_bindings.rs  mod.rs  models.rs  utils.rs
crates/idxdb-store/src/ts/: accounts.test.ts  accounts.ts  auth.test.ts  auth.ts  chainData.test.ts  chainData.ts  eslint.config.mjs  export.test.ts  export.ts  import.test.ts  import.ts  notes.test.ts  notes.ts  schema.test.ts  schema.ts  settings.test.ts  settings.ts  sync.test.ts  sync.ts  test-utils.ts  transactions-batch.test.ts  transactions.test.ts  transactions.ts  utils.test.ts
crates/js-export-macro/: Cargo.toml
crates/js-export-macro/src/: lib.rs
crates/web-client/: Cargo.toml  README.md  build.rs  package.json  playwright.config.ts  rollup.config.js  tsconfig.docs.json  tsconfig.json  typedoc.json  vitest.config.js
crates/web-client/docs/: debug_wasm.md
crates/web-client/js/: asyncLock.js  client.js  constants.js  eager.js  index.js  node-index.js  passkey-keystore.js  safe-arrays.js  standalone.js  storageView.js  syncLock.js  utils.js  wasm.js  webLock.js
crates/web-client/js/__tests__/: asyncLock.test.js  constants.test.js  standalone.test.js  syncLock.test.js  utils.test.js  webLock.test.js
crates/web-client/js/__tests__/resources/: accounts.test.js  compiler.test.js  keystore.test.js  notes.test.js  settings.test.js  tags.test.js  transactions.test.js
crates/web-client/js/node/: client-factory.js  loader.js  napi-compat.js
crates/web-client/js/resources/: accounts.js  compiler.js  keystore.js  notes.js  settings.js  tags.js  transactions.js
crates/web-client/js/types/: api-types.d.ts  docs-entry.d.ts  index.d.ts
crates/web-client/js/workers/: web-client-methods-worker.js
crates/web-client/scripts/: build-mt-conditional.js  build-types.js  check-bindgen-types.js  check-method-classification.js  check-standalone-types.js  post-build.js
crates/web-client/src/: account.rs  export.rs  helpers.rs  import.rs  keystore_api.rs  lib.rs  miden_array.rs  mock.rs  new_account.rs  new_transactions.rs  note_transport.rs  notes.rs  platform.rs  settings.rs  sync.rs  tags.rs  transactions.rs  web_keystore.rs  web_keystore_callbacks.rs  web_keystore_db.rs
crates/web-client/src/models/: account.rs  account_builder.rs  account_code.rs  account_component.rs  account_component_code.rs  account_file.rs  account_header.rs  account_id.rs  account_proof.rs  account_reader.rs  account_status.rs  account_storage.rs  account_storage_mode.rs  account_storage_requirements.rs  account_type.rs  address.rs  advice_inputs.rs  advice_map.rs  asset_vault.rs  auth.rs  auth_scheme.rs  auth_secret_key.rs  basic_fungible_faucet_component.rs  block_header.rs  code_builder.rs  committed_note.rs  consumable_note_record.rs  endpoint.rs  executed_transaction.rs  felt.rs  fetched_account.rs  foreign_account.rs  fungible_asset.rs  input_note.rs  input_note_record.rs  input_note_state.rs  input_notes.rs  library.rs  merkle_path.rs  mod.rs  (+53 more)
crates/web-client/src/models/account_delta/: mod.rs  storage.rs  vault.rs
crates/web-client/src/models/components/: auth_falcon512_rpo_multisig.rs  mod.rs
crates/web-client/src/models/transaction_request/: mod.rs  note_and_args.rs  note_details_and_tag.rs  note_id_and_args.rs  transaction_request_builder.rs
crates/web-client/src/rpc_client/: mod.rs  note.rs
crates/web-client/src/utils/: mod.rs  test_utils.rs
crates/web-client/test/: README.md  account.browser.test.ts  account.test.ts  account_component.test.ts  account_file.test.ts  account_reader.test.ts  address.test.ts  basic_fungible_faucet_component.test.ts  batch.browser.test.ts  compile_and_contract.node.test.ts  compile_and_contract.test.ts  eager_entry.test.ts  fpi.test.ts  global.test.d.ts  import.test.ts  import_export.test.ts  key.test.ts  miden_array.test.ts  miden_client_api.node.test.ts  miden_client_api.test.ts  mockchain.test.ts  multisig_component.test.ts  new_account.browser.test.ts  new_account.test.ts  new_transactions.browser.test.ts  new_transactions.test.ts  new_transactions_mint_and_misc.test.ts  new_transactions_send_and_custom.test.ts  no_auth_consume.test.ts  node-adapter.ts  note_transport.test.ts  notes.test.ts  package.test.ts  passkey-keystore.test.ts  playwright.global.setup.ts  prune_account_history.test.ts  remote_keystore.test.ts  remote_prover_transactions.test.ts  settings.test.ts  storage_view.test.ts  (+9 more)
scripts/: check-changelog.sh  check-react-sdk-sync.js  check-react-sdk-version-pr.sh  check-react-sdk-version-release.sh  check-vite-plugin-version-release.sh  check-web-client-version-pr.sh  check-web-client-version-release.sh  dev-with-client-pr.sh  extract-changelog-section.sh  retry-yarn-install.sh  wait-for-bg-binary.sh  wait-for-grpc.sh
(+116 files in other folders)
