[package]
authors.workspace      = true
description            = "IndexedDB-backed Store implementation for miden-client (WASM)"
edition.workspace      = true
license.workspace      = true
name                   = "miden-idxdb-store"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Miden dependencies
miden-client = { workspace = true }

# Workspace dependencies
async-trait = { workspace = true }
chrono      = { workspace = true }
serde       = { features = ["derive"], workspace = true }

# External dependencies
base64               = { version = "0.22" }
serde-wasm-bindgen   = { version = "0.6" }
wasm-bindgen         = { features = ["serde-serialize"], version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { features = ["Storage", "Window", "console"], version = "0.3" }

[lints]
workspace = true

[build-dependencies]
miette.workspace = true
