[package]
authors.workspace      = true
categories             = ["no-std"]
description            = "Web Client library that facilitates interaction with the Miden network"
documentation          = "https://docs.rs/miden-client-web"
edition.workspace      = true
keywords               = ["client", "miden", "wasm", "web"]
license.workspace      = true
name                   = "miden-client-web"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[package.metadata.cargo-machete]
ignored = ["wasm-bindgen-futures", "web-sys"]

[lib]
crate-type = ["cdylib"]

[features]
browser = [
  "dep:console_error_panic_hook",
  "dep:idxdb-store",
  "dep:js-sys",
  "dep:serde-wasm-bindgen",
  "dep:tracing",
  "dep:tracing-subscriber",
  "dep:tracing-wasm",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "dep:web-sys",
  "miden-client/tonic",
]
default = ["browser"]
nodejs = [
  "dep:miden-client-sqlite-store",
  "dep:napi",
  "dep:napi-build",
  "dep:napi-derive",
  "dep:tokio",
  "miden-client/std",
  "miden-client/tonic",
]
testing = ["miden-client/testing"]

[dependencies]
# Workspace dependencies
miden-client    = { features = ["testing"], workspace = true }
miden-protocol  = { workspace = true }
miden-standards = { workspace = true }

# Proc macro for dual wasm_bindgen/napi annotations
js-export-macro = { path = "../js-export-macro" }

# Common external dependencies
async-trait         = { workspace = true }
hex                 = { version = "0.4" }
rand                = { workspace = true }
serde               = { features = ["derive"], workspace = true }
thiserror.workspace = true

# Browser-only dependencies (wasm_bindgen)
console_error_panic_hook = { optional = true, version = "0.1.7" }
idxdb-store              = { optional = true, workspace = true }
js-sys                   = { optional = true, version = "0.3" }
serde-wasm-bindgen       = { optional = true, version = "0.6" }
tracing                  = { optional = true, workspace = true }
tracing-subscriber       = { default-features = false, features = ["registry"], optional = true, version = "0.3" }
tracing-wasm             = { optional = true, version = "0.2" }
wasm-bindgen             = { features = ["serde-serialize"], optional = true, version = "=0.2.108" }
wasm-bindgen-futures     = { optional = true, version = "0.4" }

# Node.js-only dependencies (napi-rs)
miden-client-sqlite-store = { optional = true, workspace = true }
napi                      = { features = ["tokio_rt"], optional = true, workspace = true }
napi-derive               = { optional = true, workspace = true }
tokio                     = { optional = true, workspace = true }

# web-sys is a browser-only dependency used for console logging
web-sys = { features = ["console"], optional = true, version = "0.3" }

[build-dependencies]
napi-build = { optional = true, workspace = true }

[lints]
workspace = true
